Fixed spacing

--- a/examples/nextjs-block-text-editor-advanced/styles/BlockTypeSelector.module.css
+++ b/examples/nextjs-block-text-editor-advanced/styles/BlockTypeSelector.module.css
@@ -9,7 +9,7 @@
 }
 
 .group {
-  padding: 0 0 0.5rem 0;
+  padding: 0 0 0.25rem 0;
 }
 
 .group:not(:first-child) {
